--- a/packages/SystemUI/res/values-ru-rRU/spark_strings.xml
+++ b/packages/SystemUI/res/values-ru-rRU/spark_strings.xml
@@ -4,43 +4,79 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- AlertSlider -->
-    <string name="alert_slider_mode_priority_text">Приоритет</string>
-    <string name="alert_slider_mode_dnd_text">\"Не беспокоить\"</string>
-    <!-- Screen record -->
-    <!-- Label for notification action to delete a screen recording file [CHAR LIMIT=35] -->
-    <string name="screenrecord_delete_label">Удалить</string>
-    <!-- A toast message shown after successfully deleting a screen recording [CHAR LIMIT=NONE] -->
-    <string name="screenrecord_delete_description">Запись видео с экрана удалена</string>
-    <string name="screenrecord_stopdot_label">Показать точку остановки</string>
-    <string name="screenrecord_stopdot_summary">Удерживайте, чтобы переместить</string>
-    <string name="screenrecord_lowquality_label">Низкое качество</string>
-    <string name="screenrecord_lowquality_summary">Для меньшего размера файла</string>
-    <string name="screenrecord_longer_timeout_switch_label">Максимальный размер файла</string>
-    <string name="screenrecord_longer_timeout_switch_summary">Максимальный размер записи до 15 ГБ</string>
-    <string name="screenrecord_skip_time_label">Пропуск времени ожидания</string>
-    <string name="screenrecord_skip_time_summary">Убрать 3-х секундное ожидание</string>
     <!-- Screenshot delete action -->
     <!-- Label for UI element which allows deleting the screenshot [CHAR LIMIT=30] -->
     <string name="screenshot_delete_label">Удалить</string>
     <!-- Content description indicating that tapping the element will allow deleting the screenshot [CHAR LIMIT=NONE] -->
     <string name="screenshot_delete_description">Удалить скриншот</string>
-    <!-- Reader mode QS tile -->
-    <string name="quick_settings_reading_mode">Режим чтения</string>
-    <string name="accessibility_quick_settings_reading_mode_on">Включить режим чтения.</string>
-    <string name="accessibility_quick_settings_reading_mode_off">Режим чтения выключен.</string>
-    <string name="accessibility_quick_settings_reading_mode_changed_on">Режим чтения включен.</string>
-    <string name="accessibility_quick_settings_reading_mode_changed_off">Режим чтения выключен.</string>
-    <!-- Refresh Rate Tile -->
-    <string name="refresh_rate_tile_label">Частота обновления</string>
-    <string name="refresh_rate_auto_mode_placeholder">Авто (<xliff:g id="min_refresh_rate" example="60">%1$d</xliff:g> - <xliff:g id="max_refresh_rate" example="60">%2$d</xliff:g> Hz)    </string>
-    <string name="refresh_rate_forced_mode_placeholder"><xliff:g id="refresh_rate" example="60">%1$d</xliff:g> Гц</string>
     <!-- Name of the nfc status bar icon. -->
     <string name="status_bar_nfc">Модуль NFC</string>
     <!-- Accessibility label for nfc icon (not shown on screen) [CHAR LIMIT=NONE] -->
     <string name="accessibility_status_bar_nfc">NFC</string>
-    <!-- Anti flicker QS tile -->
-    <string name="quick_settings_anti_flicker">Устранение мерцания</string>
+    <!-- Screen record delete action -->
+    <!-- Label for notification action to delete a screen recording file [CHAR LIMIT=35] -->
+    <string name="screenrecord_delete_label">Удалить</string>
+    <!-- A toast message shown after successfully deleting a screen recording [CHAR LIMIT=NONE] -->
+    <string name="screenrecord_delete_description">Запись видео с экрана удалена</string>
+    <!-- Statusbar tuner -->
+    <string name="statusbar_items_title">Statusbar icon</string>
+    <!-- Name of the VPN status bar icon. -->
+    <string name="status_bar_vpn">VPN</string>
+    <!-- Sb Data Saver icon -->
+    <string name="status_bar_data_saver">Экономия трафика</string>
+    <!-- Sb Call Strength icon -->
+    <string name="status_bar_call_strength">Уровень сигнала</string>
+    <!-- Alert slider extras -->
+    <string name="volume_ringer_priority_only">Priority</string>
+    <string name="volume_ringer_alarms_only">Alarms</string>
+    <string name="volume_ringer_dnd">DnD</string>
+    <string name="tristate_flashlight">Фонарик</string>
+    <string name="tristate_flashlight_on">Torch on</string>
+    <string name="tristate_flashlight_off">Torch off</string>
+    <string name="tristate_flashlight_blink">Torch blink</string>
+    <string name="tristate_brightness_bright">Max-brightness</string>
+    <string name="tristate_brightness_dark">Min-brightness</string>
+    <string name="tristate_brightness_auto">Auto-brightness</string>
+    <string name="tristate_rotation_auto">Auto-rotate</string>
+    <string name="tristate_rotation_0">Portrait</string>
+    <string name="tristate_rotation_90">Landscape (90°)</string>
+    <string name="tristate_rotation_270">Landscape (270°)</string>
+    <!-- Advanced Reboot -->
+    <string name="global_action_restart_advanced">Ещё</string>
+    <string name="global_action_restart_recovery">Рекавери</string>
+    <string name="global_action_restart_bootloader">Режим Fastboot</string>
+    <string name="global_action_restart_ui">Системный интерфейс</string>
+    <string name="global_action_onthego">On-The-Go</string>
+    <!-- On The Go -->
+    <string name="onthego_notification_ticker">Режим «На ходу» включен</string>
+    <string name="onthego_notification_title">Режим «На ходу» активен</string>
+    <string name="onthego_notification_stop">Стоп</string>
+    <string name="onthego_notification_options">Параметры</string>
+    <string name="onthego_notification_error">Не удаётся включить режим \"На ходу\"</string>
+    <string name="onthego_notification_restart">Перезапустить режим «На ходу»</string>
+    <string name="onthego_notification_camera_changed">Режим камеры изменён</string>
+    <string name="onthego_transparency">Transparency</string>
+    <string name="onthego_front_camera">Использовать переднюю камеру</string>
+    <string name="onthego_service_toggle">Автоматический перезапуск службы</string>
+    <string name="onthego_channel_name">Main</string>
+    <!-- OnTheGo Tile -->
+    <string name="quick_settings_onthego_label">Main</string>
+    <string name="accessibility_quick_settings_onthego_off">Режим «На ходу» выкл.</string>
+    <string name="accessibility_quick_settings_onthego_on">Режим «На ходу» вкл.</string>
+    <string name="accessibility_quick_settings_onthego_changed_off">Режим «На ходу» выключен</string>
+    <string name="accessibility_quick_settings_onthego_changed_on">Режим «На ходу» включен</string>
+    <!-- Text to use when the number in a notification info is too large -->
+    <!-- Name of the clock in status bar [CHAR LIMIT=30] -->
+    <string name="clock">Часы</string>
+    <!-- Kill button in notification guts -->
+    <string name="force_stop_dlg_title">Остановить принудительно?</string>
+    <string name="force_stop_dlg_text">Принудительное закрытие приложения может отразиться на его функциональности.</string>
+    <string name="guts_force_close_app">Закрыть приложение</string>
+    <!-- AOD QS tile -->
+    <string name="quick_settings_aod_label">Всегда активный экран</string>
+    <string name="quick_settings_aod_on_charge_label">Всегда активный экран при зарядке</string>
+    <string name="quick_settings_aod_off_label">Всегда активный экран выкл.</string>
+    <string name="quick_settings_aod_off_powersave_label">Всегда активный экран\n выкл.</string>
     <!-- PowerShare QS tile -->
     <string name="quick_settings_powershare_label">Беспроводная зарядка PowerShare</string>
     <string name="quick_settings_powershare_off_powersave_label">PowerShare выключен\n Экономия энергии</string>
@@ -69,18 +105,6 @@
     <string name="quick_settings_sound_ring">Звонок</string>
     <string name="quick_settings_sound_vibrate">Вибрация</string>
     <string name="quick_settings_sound_mute">Без звука</string>
-    <!-- Screenshot QS tile -->
-    <string name="quick_settings_full_screenshot_label">Полный</string>
-    <string name="quick_settings_screenshot_label">Снимок экрана</string>
-    <string name="quick_settings_region_screenshot_label">Partial screenshot</string>
-    <!-- Screenshot Delete Toast -->
-    <string name="delete_screenshot_toast">Снимок экрана удалён</string>
-    <!-- Statusbar tuner -->
-    <string name="statusbar_items_title">Statusbar icon</string>
-    <!-- Name of status bar icons. -->
-    <string name="status_bar_call_strength">Уровень сигнала</string>
-    <string name="status_bar_data_saver">Экономия трафика</string>
-    <string name="status_bar_vpn">VPN</string>
     <!-- Heads Up QS Tile -->
     <string name="quick_settings_heads_up_label">Всплывающие уведомления</string>
     <string name="accessibility_quick_settings_heads_up_off">Всплывающие уведомления выкл.</string>
@@ -91,46 +115,8 @@
     <string name="quick_settings_poweroff_label">Выключить</string>
     <string name="quick_settings_reboot_label">Перезагрузка</string>
     <string name="quick_settings_reboot_recovery_label">Рекавери</string>
-    <!-- Advanced Reboot -->
-    <string name="global_action_restart_advanced">Ещё</string>
-    <string name="global_action_restart_recovery">Рекавери</string>
-    <string name="global_action_restart_bootloader">Режим Fastboot</string>
-    <string name="global_action_restart_ui">Системный интерфейс</string>
-    <string name="global_action_onthego">On-The-Go</string>
-    <!-- On The Go -->
-    <string name="onthego_notification_ticker">Режим «На ходу» включен</string>
-    <string name="onthego_notification_title">Режим «На ходу» активен</string>
-    <string name="onthego_notification_stop">Стоп</string>
-    <string name="onthego_notification_options">Параметры</string>
-    <string name="onthego_notification_error">Не удаётся включить режим \"На ходу\"</string>
-    <string name="onthego_notification_restart">Перезапустить режим «На ходу»</string>
-    <string name="onthego_notification_camera_changed">Режим камеры изменён</string>
-    <string name="onthego_transparency">Transparency</string>
-    <string name="onthego_front_camera">Использовать переднюю камеру</string>
-    <string name="onthego_service_toggle">Автоматический перезапуск службы</string>
-    <string name="onthego_channel_name">Main</string>
-    <!-- OnTheGo Tile -->
-    <string name="quick_settings_onthego_label">Main</string>
-    <string name="accessibility_quick_settings_onthego_off">Режим «На ходу» выкл.</string>
-    <string name="accessibility_quick_settings_onthego_on">Режим «На ходу» вкл.</string>
-    <string name="accessibility_quick_settings_onthego_changed_off">Режим «На ходу» выключен</string>
-    <string name="accessibility_quick_settings_onthego_changed_on">Режим «На ходу» включен</string>
-    <!-- Text to use when the number in a notification info is too large -->
-    <!-- Face Unlock -->
-    <string name="face_unlock_recognizing">Распознавание лица...</string>
-    <!-- Name of the clock in status bar [CHAR LIMIT=30] -->
-    <string name="clock">Часы</string>
-    <!-- Kill button in notification guts -->
-    <string name="force_stop_dlg_title">Остановить принудительно?</string>
-    <string name="force_stop_dlg_text">Принудительное закрытие приложения может отразиться на его функциональности.</string>
-    <string name="guts_force_close_app">Закрыть приложение</string>
     <!-- Volume panel QS tile -->
     <string name="quick_settings_volume_panel_label">Панель громкости</string>
-    <!-- AOD QS tile -->
-    <string name="quick_settings_aod_label">Всегда активный экран</string>
-    <string name="quick_settings_aod_on_charge_label">Всегда активный экран при зарядке</string>
-    <string name="quick_settings_aod_off_label">Всегда активный экран выкл.</string>
-    <string name="quick_settings_aod_off_powersave_label">Всегда активный экран\n выкл.</string>
     <!-- DataSwitch Tile -->
     <string name="qs_data_switch_label">Сменить сим-карту для передачи данных</string>
     <string name="qs_data_switch_toast_0">Нет SIM карты</string>
@@ -146,9 +132,17 @@
     <!-- Navigation bar dpad -->
     <string name="accessibility_dpad_left">Курсор влево</string>
     <string name="accessibility_dpad_right">Курсор вправо</string>
+    <!-- Reader mode QS tile -->
+    <string name="quick_settings_reading_mode">Режим чтения</string>
+    <string name="accessibility_quick_settings_reading_mode_on">Включить режим чтения.</string>
+    <string name="accessibility_quick_settings_reading_mode_off">Режим чтения выключен.</string>
+    <string name="accessibility_quick_settings_reading_mode_changed_on">Режим чтения включен.</string>
+    <string name="accessibility_quick_settings_reading_mode_changed_off">Режим чтения выключен.</string>
     <!-- Kill foreground app -->
     <string name="task_helper_app_killed">%1$s принудительно остановлено</string>
     <string name="empty_app_killed">Приложение</string>
+    <!-- Anti flicker QS tile -->
+    <string name="quick_settings_anti_flicker">Устранение мерцания</string>
     <!-- Advanced nav gestures -->
     <string name="app_picker_dialog_title">Выберите приложение</string>
     <string name="active_edge_app_select_title">Выберите приложение</string>
@@ -174,15 +168,54 @@
     <!-- SoundSearch Tile -->
     <string name="quick_settings_sound_search">Поиск музыки</string>
     <string name="quick_settings_sound_search_no_app">Извините, но это не работает без приложения для поиска музыки.</string>
+    <!-- Refresh Rate Tile -->
+    <string name="refresh_rate_tile_label">Частота обновления</string>
+    <string name="refresh_rate_auto_mode_placeholder">Авто (<xliff:g id="min_refresh_rate" example="60">%1$d</xliff:g> - <xliff:g id="max_refresh_rate" example="60">%2$d</xliff:g> Hz)    </string>
+    <string name="refresh_rate_forced_mode_placeholder"><xliff:g id="refresh_rate" example="60">%1$d</xliff:g> Гц</string>
     <!-- Google Lens Screenshot string -->
     <string name="lensss">Объектив</string>
-    <!-- Data usage info in QS footer -->
-    <string name="usage_data">использовано сегодня</string>
-    <string name="usage_data_default_suffix">Данные</string>
-    <string name="usage_wifi_default_suffix">Wi-Fi</string>
     <!-- Smart Pixels QS Tile -->
     <string name="quick_settings_smart_pixels">Умные пиксели</string>
     <string name="quick_settings_smart_pixels_on_power_save">Автоматическое включение умных пикселей</string>
-    <!-- 5G toggle in internet dialog -->
-    <string name="enable_fiveg">Включить 5G</string>
+    <!-- Indication on the keyguard that is shown when the device is charging with a dash charger. Should match keyguard_plugged_in_dash_charging [CHAR LIMIT=40]-->
+    <string name="keyguard_indication_dash_charging_time"><xliff:g id="percentage">%2$s</xliff:g> • Dash charging (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> until full)</string>
+    <string name="keyguard_plugged_in_dash_charging"><xliff:g id="percentage">%s</xliff:g> • Dash charging</string>
+    <!-- Indication on the keyguard that is shown when the device is charging with a warp charger. Should match keyguard_plugged_in_warp_charging [CHAR LIMIT=40]-->
+    <string name="keyguard_indication_warp_charging_time"><xliff:g id="percentage">%2$s</xliff:g> • Warp Charging (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> until full)</string>
+    <string name="keyguard_plugged_in_warp_charging"><xliff:g id="percentage">%s</xliff:g> • Warp Charging</string>
+    <!-- Indication on the keyguard that is shown when the device is charging with a VOOC charger. Should match keyguard_plugged_in_vooc_charging [CHAR LIMIT=40]-->
+    <string name="keyguard_indication_vooc_charging_time"><xliff:g id="percentage">%2$s</xliff:g> • VOOC Charging (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> until full)</string>
+    <string name="keyguard_plugged_in_vooc_charging"><xliff:g id="percentage">%s</xliff:g> • VOOC Charging</string>
+    <!-- Indication on the keyguard that is shown when the device is charging with a turbo power charger. Should match keyguard_plugged_in_turbo_charging [CHAR LIMIT=40]-->
+    <string name="keyguard_indication_turbo_power_time"><xliff:g id="percentage">%2$s</xliff:g> • Turbo Charging (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> until full)</string>
+    <string name="keyguard_plugged_in_turbo_charging"><xliff:g id="percentage">%s</xliff:g> • Turbo Charging</string>
+    <!-- Indication on the keyguard that is shown when the device is charging with an oem fast power charger. Should match keyguard_plugged_in_turbo_charging [CHAR LIMIT=40]-->
+    <string name="keyguard_indication_oem_power_time"><xliff:g id="percentage">%2$s</xliff:g> • Fast Charging (<xliff:g id="charging_time_left" example="4 hours and 2 minutes">%1$s</xliff:g> until full)</string>
+    <string name="keyguard_plugged_in_oem_charging"><xliff:g id="percentage">%s</xliff:g> • Fast Charging</string>
+    <!-- Screen record -->
+    <string name="screenrecord_stopdot_label">Показать точку остановки</string>
+    <string name="screenrecord_stopdot_summary">Удерживайте, чтобы переместить</string>
+    <string name="screenrecord_lowquality_label">Низкое качество</string>
+    <string name="screenrecord_lowquality_summary">Для меньшего размера файла</string>
+    <string name="screenrecord_longer_timeout_switch_label">Максимальный размер файла</string>
+    <string name="screenrecord_longer_timeout_switch_summary">Максимальный размер записи до 15 ГБ</string>
+    <string name="screenrecord_skip_time_label">Пропуск времени ожидания</string>
+    <string name="screenrecord_skip_time_summary">Убрать 3-х секундное ожидание</string>
+    <!-- Omnijaws Weather -->
+    <string name="omnijaws_service_error">Error</string>
+    <string name="omnijaws_service_unkown">No weather data</string>
+    <string name="omnijaws_service_error_long">Error loading weather data</string>
+    <string name="omnijaws_service_disabled">Service is disabled</string>
+    <string name="omnijaws_detail_header">Погода</string>
+    <string name="omnijaws_label_default">Погода</string>
+    <string name="omnijaws_current_text">Now</string>
+    <string name="omnijaws_package_not_available">OmniJaws not available</string>
+    <string name="omnijaws_service_last_update">Last update:</string>
+    <!-- QS InternetDialog: Summary for how many devices are connected to the hotspot -->
+    <plurals name="quick_settings_internet_hotspot_summary_num_devices">
+        <item quantity="one">%d device connected</item>
+        <item quantity="few">%d devices connected</item>
+        <item quantity="many">%d devices connected</item>
+        <item quantity="other">%d devices connected</item>
+    </plurals>
 </resources>
